# swissephauto.history.GNA.svn

./: README.md
tags/first-upload-unstable/debian.ex/: shlibs.local.ex
tags/first-upload-unstable/libswe-1.77.00/: configure  configure.ac
tags/first-upload-unstable/libswe-1.77.00/suggested_debian/: changelog  libswe-doc.doc-base.swephprg  swe-basic-data.dirs
tags/first-upload-unstable/swe-standard-data/: AUTHORS  config.status
tags/first_upload_to_mentors.debian.net/libswe-1.77.00/: libswe.3  swemini.1  swetest.1
tags/first_upload_to_mentors.debian.net/libswe-1.77.00/doc/: Makefile.am
tags/first_upload_to_mentors.debian.net/libswe-1.77.00/rpm/: libswe.spec
tags/first_upload_to_mentors.debian.net/libswe-1.77.00/src/: Makefile.am
tags/first_upload_to_mentors.debian.net/libswe-1.77.00/suggested_debian/: README.source  copyright  libswe-dev.install
tags/first_upload_to_mentors.debian.net/swe-standard-data/: Makefile  config.h  configure.ac
tags/gna-snapshot/libswe-1.77.00/: NEWS  configure.ac
tags/gna-snapshot/libswe-1.77.00/suggested_debian/: control
tags/gna-snapshot/swe-standard-data/: Makefile.am
tags/gna-snapshot/swe-standard-data/suggested_debian/: copyright
tags/greenspider/debian.ex/: watch.ex
tags/greenspider/libswe-1.77.00/: .anjuta_sym_db.db  INSTALL  Makefile.in  configure.ac  swemini.1
tags/greenspider/libswe-1.77.00/astrodocsrc/: swephprg.doc
tags/greenspider/libswe-1.77.00/rpm/: libswe.spec
tags/greenspider/libswe-1.77.00/src/: libswe-1.77.00.pc.in
tags/greenspider/libswe-1.77.00/suggested_debian/: README.Debian  docs  rules  watch
tags/greenspider/swe-standard-data/: Makefile  README.Linux  config.status
tags/greenspider/swe-standard-data/suggested_debian/: README.source  docs
tags/libswe-1.77.00.0005/debian.ex/: manpage.1.ex
tags/libswe-1.77.00.0005/libswe-1.77.00/: COPYING  configure
tags/libswe-1.77.00.0005/swe-standard-data/: Makefile.am  config.h
tags/libswe_1.77.00.0005-2/debian.ex/: manpage.sgml.ex
tags/libswe_1.77.00.0005-2/libswe-1.77.00/: Makefile.in  libswe.3
tags/libswe_1.77.00.0005-2/libswe-1.77.00/suggested_debian/: TODO  changelog  libswe-doc.lintian-overrides  libswe0.symbols
tags/libswe_1.77.00.0005-2/swe-standard-data/suggested_debian/: watch
tags/libswe_1.77.00.0005-3.dsc/debian.ex/: manpage.xml.ex
tags/libswe_1.77.00.0005-3.dsc/libswe-1.77.00/: INSTALL
tags/libswe_1.77.00.0005-3.dsc/libswe-1.77.00/doc/: Makefile.am
tags/libswe_1.77.00.0005-3.dsc/libswe-1.77.00/suggested_debian/: changelog  control  docs  libswe-dev.examples  libswe-dev.lintian-overrides  libswe-doc.install  libswe0.lintian-overrides
tags/libswe_1.77.00.0005-3.dsc/swe-standard-data/: Makefile  se00433s.se1
tags/mixed/libswe-1.77.00/: NEWS  configure.ac
tags/mixed/libswe-1.77.00/doc/: Makefile.in
tags/mixed/libswe-1.77.00/src/: libswe-1.77.0.pc.in
tags/prerelease_review_debian_mentors/libswe-1.77.00/: .anjuta_sym_db.db  INSTALL  Makefile.am  configure  configure.ac  swetest.1
tags/prerelease_review_debian_mentors/libswe-1.77.00/src/: Makefile.am  Makefile.in
tags/prerelease_review_debian_mentors/libswe-1.77.00/suggested_debian/: README.source  changelog
tags/prerelease_review_debian_mentors/swe-standard-data/: Makefile  Makefile.am  Makefile.in  configure.ac
tags/prerelease_review_debian_mentors/swe-standard-data/suggested_debian/: rules  watch
tags/redspider/html/: index.html
tags/redspider/libswe-1.77.00/: COPYING  Makefile.am  README  configure  configure.ac
tags/redspider/libswe-1.77.00/doc/: Makefile.am  Makefile.in
tags/redspider/libswe-1.77.00/src/: Makefile.am  Makefile.in
tags/second_upload_to_mentors.debian.net_version_0002/libswe-1.77.00/: Makefile.in  configure
tags/second_upload_to_mentors.debian.net_version_0002/swe-standard-data/: Makefile.in  config.h
tags/trunk/html/: index.html
tags/trunk/libswe-1.77.00/: Makefile.in  README  configure
tags/trunk/libswe-1.77.00/doc/: Makefile.am
tags/trunk/libswe-1.77.00/src/: Makefile.in
trunk/debian/: README.Debian  changelog  control  copyright  libswe-dev.install  libswe-dev.manpages  libswe.3  libswe.doc-base  swe-basic-data.dirs  swetest.1
trunk/html/: index.html
trunk/libswe/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
trunk/libswe-1.77.00/: .anjuta_sym_db.db  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  swemini.1  swetest.1
trunk/libswe-1.77.00/astrodocsrc/: swisseph.doc
trunk/libswe-1.77.00/doc/: Makefile.am  Makefile.in
trunk/libswe-1.77.00/rpm/: libswe.spec
trunk/libswe-1.77.00/src/: Makefile.am  Makefile.in  symbols.sym
trunk/libswe-1.77.00/suggested_debian/: README.Debian  README.source  changelog  control  copyright  libswe-dev.doc-base.swephprg  libswe-dev.doc-base.swisseph  libswe-dev.install  libswe-dev.manpages  libswe-doc.doc-base.swisseph  libswe.doc-base  rules  swe-basic-data.dirs  swe-basic-data.install  swe-basic-data.lintian-overrides  watch
trunk/libswe-1.77.00/suggested_debian/patches/: ephepath-fix  series
trunk/libswe-doc/: COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.status  configure  configure.ac
trunk/libswe-doc/doc/: Makefile  Makefile.am  Makefile.in
trunk/libswe-doc/iloconvert/: DocumentConverter.py  loconvert
trunk/libswe-doc/suggested_debian/: control
trunk/libswe/src/: Makefile.am  Makefile.in  libswe-1.79.00.pc.in  libswe-1.80.00.pc.in
trunk/swe-extrapolated-data/: Makefile  Makefile.am  Makefile.in  README.Linux  README.TXT  config.h  config.status  configure  configure.ac
trunk/swe-standard-data/: COPYING  Makefile  Makefile.am  Makefile.in  README.Linux  README.TXT  config.h  config.status  configure  configure.ac
trunk/swe-standard-data/rpm/: swe-standard-data.spec
trunk/swe-standard-data/suggested-debian/: README.Debian  control  copyright  docs
trunk/swe-standard-data/suggested_debian/: README.Debian  README.source  changelog  control  files  watch
website/: index.html
(+8 files in other folders)
