## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g


EXTRA_DIST = \
	README.TXT\
	README.Linux\
	COPYING\
	LICENSE.TXT\
	AUTHORS

ephedatadir = $(datadir)/libswe/ephe/




dist_ephedata_DATA = \
	seas_102.se1 \
	seas_108.se1 \
	seas_114.se1 \
	seas_120.se1 \
	seas_126.se1 \
	seas_132.se1 \
	seas_138.se1 \
	seas_144.se1 \
	seas_150.se1 \
	seas_156.se1 \
	seas_162.se1 \
	seas_60.se1 \
	seas_66.se1 \
	seas_72.se1 \
	seas_78.se1 \
	seas_84.se1 \
	seas_90.se1 \
	seas_96.se1 \
	seasm102.se1 \
	seasm108.se1 \
	seasm114.se1 \
	seasm120.se1 \
	seasm126.se1 \
	seasm132.se1 \
	seasm60.se1 \
	seasm66.se1 \
	seasm72.se1 \
	seasm78.se1 \
	seasm84.se1 \
	seasm90.se1 \
	seasm96.se1 \
	semo_102.se1 \
	semo_108.se1 \
	semo_114.se1 \
	semo_120.se1 \
	semo_126.se1 \
	semo_132.se1 \
	semo_138.se1 \
	semo_144.se1 \
	semo_150.se1 \
	semo_156.se1 \
	semo_162.se1 \
	semo_60.se1 \
	semo_66.se1 \
	semo_72.se1 \
	semo_78.se1 \
	semo_84.se1 \
	semo_90.se1 \
	semo_96.se1 \
	semom102.se1 \
	semom108.se1 \
	semom114.se1 \
	semom120.se1 \
	semom126.se1 \
	semom132.se1 \
	semom60.se1 \
	semom66.se1 \
	semom72.se1 \
	semom78.se1 \
	semom84.se1 \
	semom90.se1 \
	semom96.se1 \
	sepl_102.se1 \
	sepl_108.se1 \
	sepl_114.se1 \
	sepl_120.se1 \
	sepl_126.se1 \
	sepl_132.se1 \
	sepl_138.se1 \
	sepl_144.se1 \
	sepl_150.se1 \
	sepl_156.se1 \
	sepl_162.se1 \
	sepl_60.se1 \
	sepl_66.se1 \
	sepl_72.se1 \
	sepl_78.se1 \
	sepl_84.se1 \
	sepl_90.se1 \
	sepl_96.se1 \
	seplm102.se1 \
	seplm108.se1 \
	seplm114.se1 \
	seplm120.se1 \
	seplm126.se1 \
	seplm132.se1 \
	seplm60.se1 \
	seplm66.se1 \
	seplm72.se1 \
	seplm78.se1 \
	seplm84.se1 \
	seplm90.se1 \
	seplm96.se1

#bin_PROGRAMS = swe_standard_data

#swe_standard_data_SOURCES = \
#	main.c

#swe_standard_data_LDFLAGS = 

#swe_standard_data_LDADD = 

