dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(swe-extrapolated-data, 00001)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_PROG_CC

ephedatadir='$(datadir)/libswe/ephe'
AC_SUBST(ephedatadir)
ast0ephedatadir='$(ephedatadir)/ast0'
AC_SUBST(ast0ephedatadir)



AC_OUTPUT([
Makefile
])
