## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g


EXTRA_DIST = \
	README.TXT\
	README.Linux\
	COPYING\
	LICENSE.TXT\
	AUTHORS

ast0ephedatadir = $(datadir)/libswe/users/ephe/ast0
dist_ast0ephedata_DATA = \
	se00433s.se1

ephedatadir = $(datadir)/libswe/users/ephe/
dist_ephedata_DATA = \
	seas_00.se1\
	seas_06.se1 \
	seas_12.se1 \
	seas_18.se1 \
	seas_24.se1 \
	seas_30.se1 \
	seas_36.se1 \
	seas_42.se1 \
	seas_48.se1 \
	seasm06.se1 \
	seasm12.se1 \
	seasm18.se1 \
	seasm24.se1 \
	seasm30.se1 \
	seasm36.se1 \
	seasm42.se1 \
	seasm48.se1 \
	seasm54.se1 \
	semo_00.se1 \
	semo_06.se1 \
	semo_12.se1 \
	semo_18.se1 \
	semo_24.se1 \
	semo_30.se1 \
	semo_36.se1 \
	semo_42.se1 \
	semo_48.se1 \
	semom06.se1 \
	semom12.se1 \
	semom18.se1 \
	semom24.se1 \
	semom30.se1 \
	semom36.se1 \
	semom42.se1 \
	semom48.se1 \
	semom54.se1 \
	sepl_00.se1 \
	sepl_06.se1 \
	sepl_12.se1 \
	sepl_18.se1 \
	sepl_24.se1 \
	sepl_30.se1 \
	sepl_36.se1 \
	sepl_42.se1 \
	sepl_48.se1 \
	seplm06.se1 \
	seplm12.se1 \
	seplm18.se1 \
	seplm24.se1 \
	seplm30.se1 \
	seplm36.se1 \
	seplm42.se1 \
	seplm48.se1 \
	seplm54.se1

#bin_PROGRAMS = swe_standard_data

#swe_standard_data_SOURCES = \
#	main.c

#swe_standard_data_LDFLAGS = 

#swe_standard_data_LDADD = 

